force-app/main/default/objects/Document_Storage__c/Document_Storage__c.object-meta.xml
<CustomObject>
    <label>Document Storage</label>
    <nameField>
        <displayFormat>DC-{000000}</displayFormat>
        <label>Document ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Document Storages</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>