force-app/main/default/objects/Document_Storage__c/fields/Agency_Name__c.field-meta.xml
<CustomField>
    <fullName>Agency_Name__c</fullName>
    <description>Agency Name is populated from placement object.</description>
    <formula>Placement_Agency__r.Agency_Name__c</formula>
    <inlineHelpText>Agency Name</inlineHelpText>
    <label>Agency Name</label>
    <type>Text</type>
</CustomField>