force-app/main/default/objects/Document_Storage__c/fields/Balance_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Balance_Adjustment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Balance Adjustment</label>
    <type>Checkbox</type>
</CustomField>