force-app/main/default/objects/Document_Storage__c/fields/Bulk_API_Job_ID__c.field-meta.xml
<CustomField>
    <fullName>Bulk_API_Job_ID__c</fullName>
    <description>This field will keep the Job ID of the Bulk API Job so that it can be used to get the Status of the Job, Success and Failed records</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This field will keep the Job ID of the Bulk API Job so that it can be used to get the Status of the Job, Success and Failed records</inlineHelpText>
    <label>Bulk API Job ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>