force-app/main/default/objects/Document_Storage__c/fields/Buyback_Putback_Evidence__c.field-meta.xml
<CustomField>
    <fullName>Buyback_Putback_Evidence__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Buyback/Putback Evidence</description>
    <inlineHelpText>Buyback/Putback Evidence</inlineHelpText>
    <label>Buyback/Putback Evidence</label>
    <type>Checkbox</type>
</CustomField>