force-app/main/default/objects/Document_Storage__c/fields/BuyBack_Request__c.field-meta.xml
<CustomField>
    <fullName>BuyBack_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BuyBack Request</label>
    <type>Checkbox</type>
</CustomField>