force-app/main/default/objects/Document_Storage__c/fields/Commission_Month__c.field-meta.xml
<CustomField>
    <fullName>Commission_Month__c</fullName>
    <description>For Storing Commission Statement Month and Year</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>For Storing Commission Statement Month and Year</inlineHelpText>
    <label>Commission Month</label>
    <length>10</length>
    <type>Text</type>
</CustomField>