force-app/main/default/objects/Document_Storage__c/fields/Content_Type__c.field-meta.xml
<CustomField>
    <fullName>Content_Type__c</fullName>
    <description>Content Type</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Content Type</inlineHelpText>
    <label>Content Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>