force-app/main/default/objects/Document_Storage__c/fields/Created_By__c.field-meta.xml
<CustomField>
    <fullName>Created_By__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Created_By</label>
    <length>100</length>
    <type>Text</type>
</CustomField>