force-app/main/default/objects/Document_Storage__c/fields/Creator__c.field-meta.xml
<CustomField>
    <fullName>Creator__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Creator</label>
    <length>50</length>
    <type>Text</type>
</CustomField>