force-app/main/default/objects/Document_Storage__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Document Storages</relationshipLabel>
    <relationshipName>Document_Storages</relationshipName>
    <type>Lookup</type>
</CustomField>