force-app/main/default/objects/Document_Storage__c/fields/Customer_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Customer_Identifier__c</fullName>
    <description>Customer_Identifier</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Customer_Identifier</inlineHelpText>
    <label>Customer_Identifier</label>
    <length>100</length>
    <type>Text</type>
</CustomField>