force-app/main/default/objects/Document_Storage__c/fields/Direct_Payment__c.field-meta.xml
<CustomField>
    <fullName>Direct_Payment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is file Direct Payment File</description>
    <inlineHelpText>Is file Direct Payment File</inlineHelpText>
    <label>Direct Payment</label>
    <type>Checkbox</type>
</CustomField>