force-app/main/default/objects/Document_Storage__c/fields/Document_Extension__c.field-meta.xml
<CustomField>
    <fullName>Document_Extension__c</fullName>
    <description>Document Extension</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Document Extension</inlineHelpText>
    <label>Document Extension</label>
    <length>100</length>
    <type>Text</type>
</CustomField>