force-app/main/default/objects/Document_Storage__c/fields/Document_Id__c.field-meta.xml
<CustomField>
    <fullName>Document_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Document ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>