force-app/main/default/objects/Document_Storage__c/fields/Document_Related_To__c.field-meta.xml
<CustomField>
    <fullName>Document_Related_To__c</fullName>
    <description>Document Related To</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Document Related To</inlineHelpText>
    <label>Document Related To</label>
    <length>50</length>
    <type>Text</type>
</CustomField>