force-app/main/default/objects/Document_Storage__c/fields/Document_Storage__c.field-meta.xml
<CustomField>
    <fullName>Document_Storage__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Parent document storage</description>
    <inlineHelpText>Parent document storage</inlineHelpText>
    <label>Parent Document Storage</label>
    <referenceTo>Document_Storage__c</referenceTo>
    <relationshipLabel>Document Storages</relationshipLabel>
    <relationshipName>Document_Storages</relationshipName>
    <type>Lookup</type>
</CustomField>