force-app/main/default/objects/Document_Storage__c/fields/Document_Storage_Number__c.field-meta.xml
<CustomField>
    <fullName>Document_Storage_Number__c</fullName>
    <description>Document Storage Number</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Document Storage Number</inlineHelpText>
    <label>Document Storage Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>