force-app/main/default/objects/Document_Storage__c/fields/Document_URL__c.field-meta.xml
<CustomField>
    <fullName>Document_URL__c</fullName>
    <description>Document URL</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Document URL</inlineHelpText>
    <label>Document URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>