force-app/main/default/objects/Document_Storage__c/fields/File_Processed_By__c.field-meta.xml
<CustomField>
    <fullName>File_Processed_By__c</fullName>
    <description>File Processed By</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>File Processed By</inlineHelpText>
    <label>File Processed By</label>
    <length>20</length>
    <type>Text</type>
</CustomField>