force-app/main/default/objects/Document_Storage__c/fields/File_Processing_Date__c.field-meta.xml
<CustomField>
    <fullName>File_Processing_Date__c</fullName>
    <description>File Processing Date</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>File Processing Date</inlineHelpText>
    <label>File Processing Date</label>
    <type>Date</type>
</CustomField>