force-app/main/default/objects/Document_Storage__c/fields/File_Processing_Error__c.field-meta.xml
<CustomField>
    <fullName>File_Processing_Error__c</fullName>
    <description>File Processing Error</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>File Processing Error</inlineHelpText>
    <label>File Processing Error</label>
    <length>255</length>
    <type>Text</type>
</CustomField>