force-app/main/default/objects/Document_Storage__c/fields/File_Processing_Link__c.field-meta.xml
<CustomField>
    <fullName>File_Processing_Link__c</fullName>
    <description>File Processing Link for staging records</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>File Processing Link for staging records</inlineHelpText>
    <label>File Processing Link</label>
    <type>Url</type>
</CustomField>