force-app/main/default/objects/Document_Storage__c/fields/File_Processing_Link_Formula__c.field-meta.xml
<CustomField>
    <fullName>File_Processing_Link_Formula__c</fullName>
    <formula>IF( NOT(ISBLANK( File_Processing_Link__c )) , HYPERLINK( File_Processing_Link__c , &quot;Process&quot;, &quot;_blank&quot;), null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>File Processing Link</label>
    <type>Text</type>
</CustomField>