force-app/main/default/objects/Document_Storage__c/fields/File_Processing_Status__c.field-meta.xml
<CustomField>
    <fullName>File_Processing_Status__c</fullName>
    <description>File Processing Status</description>
    <inlineHelpText>File Processing Status</inlineHelpText>
    <label>File Processing Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Staging Table Created</fullName>
            </value>
            <value>
                <fullName>Staging Table Creation Failed</fullName>
            </value>
            <value>
                <fullName>Processed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Successful</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>