force-app/main/default/objects/Document_Storage__c/fields/Insolvency_Account__c.field-meta.xml
<CustomField>
    <fullName>Insolvency_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is the lookup to Insolvency Account to which the statement is related to</description>
    <inlineHelpText>This field is the lookup to Insolvency Account to which the statement is related to</inlineHelpText>
    <label>Insolvency Account</label>
    <referenceTo>Insolvency_Account__c</referenceTo>
    <relationshipLabel>Document Storages</relationshipLabel>
    <relationshipName>Document_Storages</relationshipName>
    <type>Lookup</type>
</CustomField>