force-app/main/default/objects/Document_Storage__c/fields/Judgment__c.field-meta.xml
<CustomField>
    <fullName>Judgment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Judgment ID</label>
    <referenceTo>Judgment__c</referenceTo>
    <relationshipLabel>Document Storages</relationshipLabel>
    <relationshipName>Document_Storages</relationshipName>
    <type>Lookup</type>
</CustomField>