force-app/main/default/objects/Document_Storage__c/fields/Judgment_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Judgment_Identifier__c</fullName>
    <description>Judgment_Identifier</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Judgment_Identifier</inlineHelpText>
    <label>Judgment_Identifier</label>
    <length>100</length>
    <type>Text</type>
</CustomField>