force-app/main/default/objects/Document_Storage__c/fields/Last_Modified_By__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_By__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Last_Modified_By</label>
    <length>100</length>
    <type>Text</type>
</CustomField>