force-app/main/default/objects/Document_Storage__c/fields/Media_Request__c.field-meta.xml
<CustomField>
    <fullName>Media_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Media request record</description>
    <inlineHelpText>Media request record</inlineHelpText>
    <label>Media Request</label>
    <type>Checkbox</type>
</CustomField>