force-app/main/default/objects/Document_Storage__c/fields/Parent_WorkAssignment_Product__c.field-meta.xml
<CustomField>
    <fullName>Parent_WorkAssignment_Product__c</fullName>
    <formula>IF(  Work_Assignment__r.Product__c != NULL, Work_Assignment__r.Product__c, &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent_WorkAssignment_Product</label>
    <type>Text</type>
</CustomField>