force-app/main/default/objects/Document_Storage__c/fields/Placement_Agency__c.field-meta.xml
<CustomField>
    <fullName>Placement_Agency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Placement Agency</description>
    <inlineHelpText>Placement Agency</inlineHelpText>
    <label>Agency ID</label>
    <referenceTo>Placement__c</referenceTo>
    <relationshipLabel>Document Storages</relationshipLabel>
    <relationshipName>Document_Storages</relationshipName>
    <type>Lookup</type>
</CustomField>