force-app/main/default/objects/Document_Storage__c/fields/Placement_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Placement_Identifier__c</fullName>
    <description>Placement Identifier</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Placement Identifier</inlineHelpText>
    <label>Placement Identifier</label>
    <length>100</length>
    <type>Text</type>
</CustomField>