force-app/main/default/objects/Document_Storage__c/fields/PutBack_Request__c.field-meta.xml
<CustomField>
    <fullName>PutBack_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PutBack Request</label>
    <type>Checkbox</type>
</CustomField>