force-app/main/default/objects/Document_Storage__c/fields/Record_Type_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_Identifier__c</fullName>
    <description>Record Type Identifier</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Record Type Identifier</inlineHelpText>
    <label>Record Type Identifier</label>
    <length>100</length>
    <type>Text</type>
</CustomField>