force-app/main/default/objects/Document_Storage__c/fields/Staging_Records_Created__c.field-meta.xml
<CustomField>
    <fullName>Staging_Records_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Will be set to true if excel file is converted to JSON and staging records are created</description>
    <inlineHelpText>Will be set to true if excel file is converted to staging records</inlineHelpText>
    <label>Staging Records Created</label>
    <type>Checkbox</type>
</CustomField>