force-app/main/default/objects/Document_Storage__c/fields/Statement_Processing_Status__c.field-meta.xml
<CustomField>
    <fullName>Statement_Processing_Status__c</fullName>
    <inlineHelpText>This field keeps track of the processing of Statement Zipfile</inlineHelpText>
    <label>Statement Processing Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Processed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Pending Process</fullName>
            </value>
            <value>
                <fullName>No Files</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>