force-app/main/default/objects/Document_Storage__c/fields/Token_ID__c.field-meta.xml
<CustomField>
    <fullName>Token_ID__c</fullName>
    <description>This field will keep the Token ID of the portal side Zip file processing job</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This field will keep the Token ID of the portal side Zip file processing job</inlineHelpText>
    <label>Token ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>