force-app/main/default/objects/Document_Storage__c/fields/Visibility__c.field-meta.xml
<CustomField>
    <fullName>Visibility__c</fullName>
    <label>Visibility</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CFG only</fullName>
            </value>
            <value>
                <fullName>CFG + Requesting Agency</fullName>
            </value>
            <value>
                <fullName>CFG + All Agencies</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>