force-app/main/default/objects/Document_Storage__c/fields/Work_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Work_Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Work Assignment</description>
    <inlineHelpText>Work Assignment</inlineHelpText>
    <label>Work Assignment</label>
    <referenceTo>Work_Assignment__c</referenceTo>
    <relationshipLabel>Document Storages</relationshipLabel>
    <relationshipName>Document_Storages</relationshipName>
    <type>Lookup</type>
</CustomField>