force-app/main/default/objects/Document_Storage__c/fields/Work_Assignment_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Work_Assignment_Identifier__c</fullName>
    <description>Work_Assignment _Identifier</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Work_Assignment _Identifier</inlineHelpText>
    <label>Work_Assignment _Identifier</label>
    <length>100</length>
    <type>Text</type>
</CustomField>