force-app/main/default/objects/Document_Storage__c/fields/Work_Assignment_Placement__c.field-meta.xml
<CustomField>
    <fullName>Work_Assignment_Placement__c</fullName>
    <formula>Work_Assignment__r.Placement_Agency_Identifier__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Work Assignment Placement</label>
    <type>Text</type>
</CustomField>