force-app/main/default/objects/Document_Storage__c/fields/Work_Assignment_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Work_Assignment_Purpose__c</fullName>
    <formula>IF( Work_Assignment__c != NULL,  TEXT(Work_Assignment__r.Purpose__c) , NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Work Assignment Purpose</label>
    <type>Text</type>
</CustomField>