force-app/main/default/objects/Document_Storage__c/recordTypes/CTB.recordType-meta.xml
<RecordType>
    <fullName>CTB</fullName>
    <active>true</active>
    <description>Record Type for CTB file storage</description>
    <label>CTB</label>
</RecordType>