force-app/main/default/objects/Document_Storage__c/recordTypes/Distressed.recordType-meta.xml
<RecordType>
    <fullName>Distressed</fullName>
    <active>true</active>
    <label>Distressed</label>
</RecordType>