force-app/main/default/objects/Document_Storage__c/recordTypes/Fidem.recordType-meta.xml
<RecordType>
    <fullName>Fidem</fullName>
    <active>true</active>
    <label>Fidem</label>
</RecordType>