force-app/main/default/objects/Document_Storage__c/recordTypes/Insolvency.recordType-meta.xml
<RecordType>
    <fullName>Insolvency</fullName>
    <active>true</active>
    <label>Insolvency</label>
</RecordType>