force-app/main/default/objects/Document_Storage__c/recordTypes/MM.recordType-meta.xml
<RecordType>
    <fullName>MM</fullName>
    <active>true</active>
    <description>Record Type for MM file storage</description>
    <label>MM</label>
</RecordType>