force-app/main/default/objects/Document_Storage__c/listViews/Buyback_Putback.listView-meta.xml
<ListView>
    <fullName>Buyback_Putback</fullName>
    <columns>NAME</columns>
    <columns>Document_Name__c</columns>
    <columns>File_Processing_Status__c</columns>
    <columns>Uploaded_By__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Document_Type__c</field>
        <operation>equals</operation>
        <value>Buyback/Putback Submission ZIP</value>
    </filters>
    <label>Buyback/Putback</label>
</ListView>