force-app/main/default/objects/Document_Storage__c/listViews/File_Processing_Documents_Error.listView-meta.xml
<ListView>
    <fullName>File_Processing_Documents_Error</fullName>
    <columns>NAME</columns>
    <columns>Document_Name__c</columns>
    <columns>Document_Storage_Number__c</columns>
    <columns>Document_Type__c</columns>
    <columns>File_Processing_Error__c</columns>
    <columns>File_Processing_Date__c</columns>
    <columns>Placement_Agency__c</columns>
    <columns>Visibility__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>File_Processing_Error__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>File Processing Documents - Error</label>
    <sharedTo>
        <group>ICT_Group</group>
        <group>ICT_User_Visibility_Group</group>
        <group>LRT_Group</group>
        <group>LRT_User_Visibility_Group</group>
    </sharedTo>
</ListView>