force-app/main/default/objects/Document_Storage__c/listViews/MM.listView-meta.xml
<ListView>
    <fullName>MM</fullName>
    <columns>NAME</columns>
    <columns>Document_Name__c</columns>
    <columns>File_Processing_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Document_Storage__c.MM</value>
    </filters>
    <label>MM</label>
</ListView>