force-app/main/default/objects/Document_Storage__c/listViews/Modified_Today.listView-meta.xml
<ListView>
    <fullName>Modified_Today</fullName>
    <columns>NAME</columns>
    <columns>Document_Storage_Number__c</columns>
    <columns>Placement_Agency__c</columns>
    <columns>Agency_Name__c</columns>
    <columns>Customer__c</columns>
    <columns>Judgment__c</columns>
    <columns>Settlement__c</columns>
    <columns>Work_Assignment__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LAST_UPDATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Modified Today</label>
    <sharedTo>
        <group>ICT_Group</group>
        <group>LRT_Group</group>
    </sharedTo>
</ListView>