force-app/main/default/objects/Document_Storage__c/listViews/Public_Visibility.listView-meta.xml
<ListView>
    <fullName>Public_Visibility</fullName>
    <columns>LAST_UPDATE</columns>
    <columns>NAME</columns>
    <columns>Document_Type__c</columns>
    <columns>Customer__c</columns>
    <columns>Judgment__c</columns>
    <columns>Settlement__c</columns>
    <columns>Work_Assignment__c</columns>
    <columns>Placement_Agency__c</columns>
    <columns>Agency_Name__c</columns>
    <columns>Visibility__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Visibility__c</field>
        <operation>equals</operation>
        <value>Public</value>
    </filters>
    <label>Public Visibility</label>
    <language>en_US</language>
    <sharedTo>
        <group>ICT_Group</group>
        <group>LRT_Group</group>
    </sharedTo>
</ListView>